--- a/app/src/main/res/layout/shooting_layout.xml
+++ b/app/src/main/res/layout/shooting_layout.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/shooting_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#000"
-    tools:context="com.gbrl.learningcam2.ShootingActivity">
+             xmlns:tools="http://schemas.android.com/tools"
+             android:id="@+id/shooting_layout"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="#000"
+             tools:context="com.gbrl.learningcam2.camera.ShootingActivity">
 
     <TextureView
         android:layout_width="wrap_content"
