--- a/app/src/main/res/layout/album_layout.xml
+++ b/app/src/main/res/layout/album_layout.xml
@@ -8,11 +8,9 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 tools:context="com.gbrl.learningcam2.ui.AlbumFragment">
 
-    <TextView
-        android:id="@+id/album_title"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <ImageView
+        android:id="@+id/album_cover"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
