--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -12,4 +12,10 @@
         android:icon="@drawable/ic_info_black_24dp"
         android:title="About"
         app:showAsAction="ifRoom"/>
+
+    <!--<item-->
+    <!--android:id="@+id/add"-->
+    <!--android:icon="@drawable/ic_add_black_24dp"-->
+    <!--android:title="Add"-->
+    <!--app:showAsAction="ifRoom"/>-->
 </menu>
