--- a/app/src/main/res/layout/album_layout.xml
+++ b/app/src/main/res/layout/album_layout.xml
@@ -14,7 +14,13 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="57dp"/>
+        android:layout_alignParentTop="true" />
+
+    <TextView
+        android:id="@+id/album_file"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/album_cover"
+        android:layout_marginTop="8dp" />
 
 </RelativeLayout>
